@@ -51,12 +51,13 @@ samples:
  - added sample files for PIC16f723
  - added auto start USB bootloader
  - added 3 samples of use of RTC library with 16F886 (resonator and internal oscillator)
- - added1 sample of use of math function (square root) with 16F886
+ - added sample of use of math function (square root) with 16F886
  - added sample for large array library on 18f452
  - added sample for 23k256 sram on 16f877 & 18f452
  - added sample for sd card
  - added sample for eeprom 24lc256
  - added sample for fat32 on 18f452 for sd card & hard disk (fat32 is beta version)
+ - added sample for 12F675 with internal oscillator and calibration of OSCCAL
 
 compiler:
  -
